# master_ext_memory_course

./: ext_generator(С1207).ipynb
ext_merge_sort/: CMakeLists.txt  ext_msort.cpp  ext_tran.cpp  generate.cpp  main.cpp
kr_ext_memory/: CMakeLists.txt  aplusb.cpp  connected_component.cpp  generate.cpp  long_sum.cpp  main.cpp  matrix_mult_vector.cpp
transposition_ext_memory/: CMakeLists.txt  generate.cpp  main.cpp
